--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 
   <body>
     <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
-    <p>Hello World</p>
-    <!--
+    <h1 id="title">Title</h1>
+    <p id="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere laudantium quaerat ipsa quidem dolores fugit enim saepe blanditiis id deleniti odit tempora corporis consequuntur libero nobis incidunt, ut neque nisi!</p>
+    <form action="" id="survey-form">
+      <input type="text" id="name" required>
+      <input type="email" id="email" required>
 
+    </form>
+    <!--
+     
     Hello Camper!
 
     For now, the test suite only works in Chrome!
